--- a/homework_03/css/style2.css
+++ b/homework_03/css/style2.css
@@ -1,35 +1,70 @@
-body #content {
-  width: 960px;
-  margin: 0 auto;
-  padding: 25px; }
-  body #content h1 {
-    text-align: center; }
-  body #content img {
-    border: 2px solid;
-    padding: 2px; }
-  body #content .brief {
-    float: left;
-    width: 380px;
-    padding: 20px;
-    margin-right: 20px; }
-  body #content .img-right {
-    float: right;
-    margin-left: 25px; }
-  body #content .img-left {
-    float: left;
-    margin-right: 25px; }
-  body #content table {
-    border-collapse: collapse; }
-    body #content table caption {
-      text-align: right; }
-    body #content table th {
-      text-align: left;
-      font-weight: normal;
-      text-transform: uppercase;
-      padding: 10px 20px; }
-    body #content table th:nth-child(2) {
-      border-right: 1px solid;
-      border-left: 1px solid; }
-    body #content table td {
-      padding: 10px 10px 10px 20px;
-      border-bottom: 1px solid; }
+body {
+  background: rgba(198, 238, 252, 0.53); }
+  body p {
+    color: #ffffff; }
+  body a {
+    color: #fccd10; }
+  body #content {
+    width: 960px;
+    margin: 0 auto;
+    background: #3b3b3b;
+    padding: 25px; }
+    body #content h1 {
+      text-align: center;
+      text-transform: uppercase; }
+    body #content h1, body #content h2 {
+      color: #fccd10; }
+    body #content img {
+      border: 2px solid #fccd10;
+      padding: 2px; }
+    body #content .brief {
+      background: #fff178;
+      padding: 20px;
+      margin-bottom: 30px; }
+    body #content .img-right {
+      float: right;
+      margin-left: 25px; }
+    body #content .img-left {
+      float: left;
+      margin-right: 25px;
+      margin-bottom: 10px; }
+    body #content table {
+      border-collapse: collapse; }
+      body #content table caption {
+        text-align: right; }
+      body #content table th {
+        background: #94a34e;
+        text-align: left;
+        font-weight: normal;
+        text-transform: uppercase;
+        padding: 10px 20px; }
+      body #content table th:nth-child(2) {
+        border-right: 1px solid #ffffff;
+        border-left: 1px solid #ffffff; }
+      body #content table td {
+        padding: 10px 10px 10px 20px;
+        border-bottom: 1px solid #94a34e;
+        background: #677d01;
+        color: #ffffff; }
+    body #content form .fname {
+      float: left;
+      width: 49%; }
+    body #content form .lname {
+      float: right;
+      width: 49%; }
+    body #content form label {
+      color: #f5c70f; }
+    body #content form label, body #content form input[type=submit] {
+      text-transform: uppercase; }
+    body #content form input, body #content form textarea {
+      width: 100%;
+      margin: 5px 0 13px 0; }
+    body #content form input {
+      padding: 3px; }
+    body #content form input[type=submit] {
+      width: 24%;
+      padding: 12px 0;
+      font-size: 1.1em;
+      background: #3b3b3b;
+      color: #f5c70f;
+      border: 1.5px solid #f5c70f; }
