--- a/homework_12/styles.css
+++ b/homework_12/styles.css
@@ -1,25 +1,69 @@
-/* Your styles goes here */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: serif;
+}
 body {
   color: white;
   background-color: #1C1C1F;
 }
 
-body div {
+h1 {
+  margin-left: 10px;
+}
+
+.tanksColection {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0 8% 0 25px;
   
 }
 
-.tank {
+.tank:hover {
+  background-color: #2C2C2C;
+}
 
+.tank>img {
+  display: block;
+  max-height: 230px;
+  max-width: 230px;
 }
 
 .tank-desc {
-  display: grid;
-  align-items: center;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-  width: 40%;
+  max-width: 230px;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
 }
 
-.tank-desc p {
+.tank-desc>img {
   
+}
+
+.tank-desc h4 {
+  padding-left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: bold;
+}
+
+/*Tank details*/
+table {
+  width: 50%;
+  border-collapse: collapse; 
+}
+
+table caption {
+  text-align: left;
+  padding-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+table td {
+  border: 1px solid white;
+  padding: 10px;
+
 }
