--- a/homework_04/css/style.css
+++ b/homework_04/css/style.css
@@ -49,7 +49,7 @@ ul li:last-child {
 
 li:hover {
   border-bottom: 1.5px #B7C8D9 solid;
-   padding-bottom: 10px;
+  padding-bottom: 10px;
 
 }
 
@@ -61,7 +61,7 @@ header section p {
   margin-top: 0;
 }
 
-.tm {
+.tradeMark {
   margin-left: 3%;
   text-transform: uppercase;
   letter-spacing: 6px;
@@ -232,7 +232,7 @@ main p {
   border-bottom: 2px solid #F0F0F0;
   width: 100%;
   max-width: 1170px;
-  margin: 0 auto;
+  margin: 0 10.5%;
 }
 .grid-container > div > p {
   
@@ -243,7 +243,7 @@ main p {
   color:#E8E8E8;
 }
 
-.bAw, .nletter {
+.baner, .nletter {
   line-height: 25px;
 }
 
@@ -274,7 +274,7 @@ main p {
 }
 
 footer nav {
-  margin: 0 4% 0 11.5%;
+  margin: 0 5.4% 0 10.5%;
 }
 footer nav p {
   color: #A4A4A4;
